@@ -27,6 +27,9 @@ Version 1.5.3+svn:
        [secondary_unit] weapon= deprecated too; use [primary_attack] and
        [secondary_attack] blocks instead.
    * fix various minor bugs with attack filtering
+   * fix bug where max_experience of stored units was not the true max when
+     playing with under 100% exp. settings
+   * prevent some negative/nonsense values in direct WML unit modifications
  * Miscellaneous and bug fixes:
    * Changed side_drop handling not to automaticaly assign AI for side if
      leader is dead (bug #12186)
